[FIX] Card poster cover [FIX] one Card per view so I test TrackVisibility

--- a/src/App.css
+++ b/src/App.css
@@ -49,3 +49,10 @@
 /* .video-react.video-react-fullscreen > video {
   width: 1000px
 } */
+
+.video-react .video-react-poster {
+  background-size: cover;
+}
+.video-react.video-react-fluid {
+  min-height:380px
+}
